--- a/2-2주차/index.html
+++ b/2-2주차/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>버튼 클릭 카운터</title>
+    <title>버튼 클릭 카운ddddd터</title>
     <script src="counter.js"></script>
 </head>
 <body>
