feat: 2-2주차 김정대

--- a/2-2주차/index.html
+++ b/2-2주차/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>버튼 클릭 카운터</title>
+    <script src="counter.js"></script>
+    <!-- script 태그 내에 defer 속성을 쓰는 것도 해결이 간단하게 해결이 가능 -->
   </head>
   <body>
     <h1>클릭 카운터</h1>
@@ -13,6 +15,5 @@
     <p>클릭 횟수: <span id="count">0</span></p>
 
     <div id="message"></div>
-    <script src="counter.js"></script>
   </body>
 </html>
