--- a/2-2주차/index.html
+++ b/2-2주차/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>버튼 클릭 카운터</title>
-    <script src="counter.js"></script>
+    <script defer src="counter.js"></script>
 </head>
 <body>
     <h1>클릭 카운터</h1>
