방다연 3-1주차 미니과제

--- a/3-1주차 /Index.html
+++ b/3-1주차 /Index.html
@@ -16,14 +16,21 @@
         <li>4~12세: 5,000원</li>
         <li>13~64세: 10,000원</li>
         <li>65세 이상: 3,000원</li>
+        <li>독립유공자: 무료</li>
     </ul>
-    
+
+    <!-- <button onclick="testAge(-1)">-1살 테스트</button>
+    <button onclick="testAge('ㅋㅋ')">ㅋㅋ살 테스트</button>
+    <button onclick="testAge(0.5)">0.5살 테스트</button>
+    <button onclick="testAge(0.5)">0.5살 테스트</button> -->
+
     <button onclick="testAge(0)">0살 테스트</button>
     <button onclick="testAge(3)">3살 테스트</button>
     <button onclick="testAge(8)">8살 테스트</button>
     <button onclick="testAge(25)">25살 테스트</button>
     <button onclick="testAge(70)">70살 테스트</button>
     <button onclick="testAge(null)">null 테스트</button>
+    <button onclick="testAge(null, true)">독립유공자</button>
     
     <div id="result"></div>
 
