3-1주차미니과제

--- a/3-1주차/Index.html
+++ b/3-1주차/Index.html
@@ -15,7 +15,8 @@
         <li>0~3세: 무료</li>
         <li>4~12세: 5,000원</li>
         <li>13~64세: 10,000원</li>
-        <li>65세 이상: 3,000원</li>
+        <li>65세 이상: 3,000원</li> 
+        <li>독립유공자: 무료</li>
     </ul>
     
     <button onclick="testAge(0)">0살 테스트</button>
@@ -23,7 +24,8 @@
     <button onclick="testAge(8)">8살 테스트</button>
     <button onclick="testAge(25)">25살 테스트</button>
     <button onclick="testAge(70)">70살 테스트</button>
-    <button onclick="testAge(null)">null 테스트</button>
+    <button onclick="testAge(null)">나이 없음 테스트</button>
+    <button onclick="testAge(null, '독립유공자')">독립유공자</button>
     
     <div id="result"></div>
 
