--- a/3-1주차/Index.html
+++ b/3-1주차/Index.html
@@ -24,8 +24,11 @@
     <button onclick="testAge(25)">25살 테스트</button>
     <button onclick="testAge(70)">70살 테스트</button>
     <button onclick="testAge(null)">null 테스트</button>
-    
+    <button onclick="testAge(null,'독립유공자')">독립유공자 테스트</button>
+    <button onclick="testAge(null,'군인')">군인 테스트</button>
+
     <div id="result"></div>
+
 
     <script src="age-bug.js"></script>
 </body>
