현수 버튼 추가

--- a/3-1주차 /Index.html
+++ b/3-1주차 /Index.html
@@ -18,6 +18,7 @@
         <li>65세 이상: 3,000원</li>
     </ul>
     
+    <button onclick="text('아이')">현수</button>
     <button onclick="testAge(0)">0살 테스트</button>
     <button onclick="testAge(3)">3살 테스트</button>
     <button onclick="testAge(8)">8살 테스트</button>
