--- a/4-2주차/test2/index.html
+++ b/4-2주차/test2/index.html
@@ -74,7 +74,7 @@ function compareCopyMethods() {
     console.log('original.info.age:', original.info.age); // 결과는?
 }
     </pre>
-    <button onclick="testStep3()">Step 3 테스트</button>
+    <button onclick="compareCopyMethods()">Step 3 테스트</button>
     <pre id="result3"></pre>
 
     <script src="script.js"></script>
