--- a/4-2주차/test1/index.html
+++ b/4-2주차/test1/index.html
@@ -28,6 +28,8 @@
     <button onclick="testPhone('010-123-45678')">010-123-45678 (잘못된 자릿수)</button>
     <button onclick="testPhone('020-1234-5678')">020-1234-5678 (없는 번호)</button>
     <button onclick="testPhone('')">빈 문자열</button>
+    <button onclick="testPhone('010-1234a-5678')">020-1234-5678 (문자가 포함된 번호)</button>
+
 
     <div id="result"></div>
 
